--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Impactmindz-Tech.github.io/ecommerce",
+  "homepage": "https://Impactmindz-Tech.github.io/Ecommerce",
   "name": "vite",
   "private": true,
   "version": "0.0.0",
